--- a/src/css/base.css
+++ b/src/css/base.css
@@ -8,7 +8,7 @@
 
 body {
     font-family: Tahoma, Arial, sans-serif;
-    font-size: 11px;
+    font-size: 13px; /* Increased from 11px to make everything more zoomed in */
     background: #2c2c2c;
     color: #e0e0e0;
     height: 100vh;
